# renovate

./: .bazelrc  .dockerignore  .gitignore  .prettierignore  .yarnrc  BUILD.bazel  Dockerfile  WORKSPACE  bazel-bin  bazel-out  bazel-renovate  bazel-testlogs  package.json
charts/: renovate-32.152.0.tgz
charts/renovate/: README.md
charts/renovate/ci/: ci-values.yaml
ci/: Jenkinsfile.build  jenkins-shared.groovy
ci/scripts/: build_step.sh  init_jenkins.sh  install-bazelisk.sh  install_gh.sh  post.sh  push_step.sh
configs/rbe_default/: BUILD  configs.tar  image_name  output.tar  run_and_extract.sh
configs/rbe_default/cc/: BUILD
configs/rbe_default/config/: BUILD  Dockerfile
configs/rbe_default/container/: run_in_container.sh
lib/util/git/: index.ts
rules/: WORKSPACE
rules/dockerfile/: BUILD  dockerfile_build.bzl
src/: config-validator.ts
